Thu Jan  7 17:30:21 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.h:
        * tools/odds_monitor/MonitorData.cpp:
        * tools/odds_monitor/MonitorTask.h:
        * tools/odds_monitor/Viewer.cpp:

          Removed a minor encapsulation violation.

Thu Jan  7 05:14:11 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * NEWS:

          Updated release notes with new documentation path.

Thu Jan  7 05:08:11 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/udp/UdpDataLink.cpp:

          Corrected logging for errno values.

Thu Jan  7 04:44:26 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multirepo.html:

          Updated to new HTML documentation style.

Wed Jan  6 05:23:50 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * bin/PerlDDS/Cross_Sync.pm:
        * bin/PerlDDS/Cross_Sync_Common.pm:
        * bin/PerlDDS/Process_Java.pm:

          Fixed package names.

        * contrib/wrapper/example/WrapperStockQuoter.mpc:

          Fixed includes directive.

Wed Jan  6 04:24:14 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * docs/design/SCALE:

          Added scalability discussion.

Tue Jan  5 16:01:24 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.inl:
        * dds/DCPS/transport/simpleTCP/SimpleTcpReceiveStrategy.h:
        * dds/DCPS/transport/simpleTCP/SimpleTcpReceiveStrategy.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpSendStrategy.h:

          Adjusted the includes to fix compilation errors on solaris
          builds.

Tue Jan  5 00:10:27 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * bin/PerlDDS/Cross_Sync.pm:
        * bin/PerlDDS/Cross_Sync_Common.pm:
        * bin/PerlDDS/Process_Java.pm:
        * bin/PerlDDS/Run_Test.pm: